--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,9 @@
 <h1>Training banking</h1>
-
 <button mat-button (click)="openDialog()">Open dialog</button>
-
 <div class="container">
   <div class="row">
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
+    <app-header></app-header>
+    <app-content></app-content>
+    <app-footer></app-footer>
   </div>
 </div>
